[package]
name = "fastrace"
version = "0.1.0"
edition = "2021"
categories = ["development-tools::debugging"]
description = "A high-performance timeline tracing library for Rust"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "../README.md"

[features]
enable = []

[dependencies]
fastant = "0.1"
parking_lot = "0.12"
pin-project = { version = "1.1.8" }
rand = "0.9"
rtrb = "0.3"

# TODO: remove once_cell once MSRV is above 1.80
once_cell = "1.19"

[dev-dependencies]
rand = "0.9"
tokio = { version = "1.38", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
