[package]
name = "fastrace"
version = "0.1.0"
edition = "2021"
categories = ["development-tools::debugging"]
description = "A high-performance timeline tracing library for Rust"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "../README.md"

[features]
enable = []
atomic = []
fallback-coarse = ["coarsetime"]

[dependencies]
coarsetime = { version = "0.1", optional = true }
parking_lot = "0.12"
pin-project = { version = "1.1.8" }
rand = "0.9"
rtrb = "0.3"

# TODO: remove once_cell once MSRV is above 1.80
once_cell = "1.19"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
small_ctor = { version = "0.1.2" }
# `lazy_static` is pulled by coarsetime and we want make version 1 or higher
# to keep our CI running.
lazy_static = "1"


[dev-dependencies]
rand = "0.9"
tokio = { version = "1.38", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
