[package]
name = "hopframe"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
framehop = { version = "0.13", default-features = false, features = ["std"] }
wholesym = { git = "https://github.com/mox692/samply.git", optional = true }
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[features]
default = []
symbolize = ["wholesym"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] } # Feature "macros" for #[tokio::test]
criterion = "0.5.1"
backtrace = "0.3"

[[bench]]
name = "framehop_vs_backtrace"
path = "benches/framehop_vs_backtrace.rs"
harness = false
