[package]
name = "hopframe"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
rust-version = "1.70"

[dependencies]
framehop = { version = "0.13", default-features = false, features = ["std"] }
# wholesym = { git = "https://github.com/mox692/samply.git", branch = "fix-samply-symbols-compile-error", optional = true }
wholesym = { version = "0.8.1", optional = true }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", optional = true }

[features]
# TODO: fix
default = ["symbolize"]
symbolize = ["dep:wholesym", "dep:procfs"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] } # Feature "macros" for #[tokio::test]

[target.'cfg(target_os = "linux")'.dev-dependencies]
procfs = "0.16"

[[bench]]
name = "framehop_vs_backtrace"
path = "benches/framehop_vs_backtrace.rs"
harness = false
