[package]
name = "rt-trace"
version = "0.1.0"

categories = ["development-tools::debugging"]
description = "Perfetto reporter for fastrace"
keywords = ["tracing", "span", "perfetto"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastant = "0.1"
prost = "=0.13.2"
prost-derive = "=0.13.2"
bytes = "1.10"
rtrb = "0.3"

# TODO: remove once_cell once MSRV is above 1.80
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
fastrace = { path = "../fastrace" }
criterion = "0.5"

[build-dependencies]
# we need to fix the version to match our msrv
prost-build = "=0.13.2"

# protobuf compilation issue
[target.'cfg(not(target_os = "windows"))'.build-dependencies]
protobuf-src = "2.1"

[profile.release]
debug = true
