[package]
name = "rt-trace"
edition = "2021"
version = "0.1.0"

categories = ["development-tools::debugging"]
description = "Perfetto reporter for fastrace"
keywords = ["tracing", "span", "perfetto"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
fastant = "0.1"
prost = { version = "=0.13.2" }
prost-derive = "=0.13.2"
bytes = "1.10"
rtrb = "0.3"
crossbeam-deque = "0.8.6"
# It's not directry used, but we need to build relatively newer anyhow to make CI happy.
anyhow = "1.0.98"

# TODO: remove once_cell once MSRV is above 1.80
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
# fastrace = "0.7.9"

[build-dependencies]
# we need to fix the version to match our msrv
prost-build = "=0.13.2"

# protobuf compilation issue
[target.'cfg(not(target_os = "windows"))'.build-dependencies]
protobuf-src = "2.1"
