[package]
name = "tracing-perfetto"
version = "0.1.1"
edition = "2021"
authors = [ "csmoe@msn.com" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/csmoe/tracing-perfetto"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = [ "perfetto", "tracing", "subscriber", "profiling" ]
description = """
Tracing layer for recording spans and events as perfetto event format.
"""

[features]
# symbolize = ["clap", "hopframe"]
default = []

[dependencies]
bytes = "1.6.0"

# we need to fix the version to match our msrv
prost = "=0.13.2"
prost-derive = "=0.13.2"

# Not used, for prost dep.
anyhow = "1.0.96"
rand = "0.8.5"
thread-id = "4.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"


[target.'cfg(target_os = "linux")'.dependencies]
# hopframe = { path = "../hopframe", optional = true, features = ["symbolize"] }
# procfs = "0.16"

[build-dependencies]
# we need to fix the version to match our msrv
prost-build = "=0.13.2"

# protobuf compilation issue
[target.'cfg(not(target_os = "windows"))'.build-dependencies]
protobuf = "3.7.2"
protobuf-src = "2.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"

#[[bin]]
#name = "perfetto_symbolize"
#path = "src/perfetto_symbolize.rs"
#required-features = ["symbolize"]
